--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -27,6 +27,7 @@
         <% end %>
         <!-- </div> -->
       </div>
+      <img src="images/backimage.jpg" alt="background image">
       <br>
       <br>
     </div>
