--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -11,7 +11,7 @@
   }
 }
 body {
-  background-image: url("backimage.jpg");
+  background-image: url("backimage.png");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
