back image 2 fix

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -27,8 +27,9 @@
         <% end %>
         <!-- </div> -->
       </div>
-      <img src="images/backimage.png" alt="background image">
-      <br>
+        <div><%= image_tag "backimage.png", height: 50 %></div>
+<!--       <img src="images/backimage.png" alt="background image">
+ -->      <br>
       <br>
     </div>
   </div>
