--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -13,7 +13,7 @@
           </li> -->
         <!-- <div class="row"> -->
           <div class="col-4">
-            <div class="card">
+            <div class="cards">
             <div class="flat-card">
               <div class="flat-card-image" style="background-color: grey"></div>
               <div class="flat-card-content" style="background-color: rgba(245, 245, 245, 0.4);">
