--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -77,7 +77,7 @@ li {
   color: white;
   font-size: 80px;
   width: 100px;
-  position : sticky;
+  // position : sticky;
   padding: 50px;
   padding-bottom: 70px;
   background-color: rgba(0,0,0,.5);
