--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -15,7 +15,9 @@
           <div class="col-4">
             <div class="cards">
             <div class="flat-card">
-              <div class="flat-card-image" style="background-color: grey"></div>
+              <div class="flat-card-image" style="background-image: url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>')">
+
+              </div>
               <div class="flat-card-content" style="background-color: rgba(245, 245, 245, 0.4);">
                 <div class="flat-card-title">
                   <h4><%= link_to cocktail.name, cocktail_path(cocktail)%></h4>
@@ -27,9 +29,7 @@
         <% end %>
         <!-- </div> -->
       </div>
-        <div><%= image_tag "backimage.png", height: 50 %></div>
-<!--       <img src="images/backimage.png" alt="background image">
- -->      <br>
+      <br>
       <br>
     </div>
   </div>
