--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,8 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-light bg-light">
-<!--       <%= image_tag "logo.png", height: 50 %>
- -->      <%= link_to 'Cocktail', cocktails_path, class: 'navbar-brand' %>
+    <nav class="navbar fixed-top navbar-light bg-light">
+      <%= link_to 'Cocktail', cocktails_path, class: 'navbar-brand' %>
       <!-- <img src="app/assets/images/logo.png" width="30" height="30" alt=""> -->
       <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="ml-auto flex">
