--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -90,44 +90,87 @@ li {
     text-decoration: none !important;
   }
 }
-// .flex {
+// .cards {
 //   display: flex;
-// }
-// .flex-align {
-//   display: flex;
-//   align-items: center;
+//   // grid-template-columns: 1fr 1fr 1fr;
+//   // grid-gap: 16px;
 //   justify-content: space-between;
+//   align-item: center;
 // }
+// .flat-card {
+//   width: 100%;
+//   height: 100%;
+//   position: relative;
+//   margin: .5rem 0 1rem 0;
+//   border-radius: 2px;
+//   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+// }
+// .flat-card-image {
+//   // height: 180px;
+//   background-position: center;
+//   background-size: cover;
+// }
+// .flat-card-content {
+//   padding: 24px;
+//   background-color: #F8F9FA;
+//   background-color: rgba(0,0,0,.7) !important;
+//   color: black;
+//   opacity: .4;
+//   &:hover {
+//     background-color: rgba(20,20,20,.7) !important;
+//     opacity: .7;
+//     text-decoration: none !important;
+//   }
+// }
+a:hover, a:focus {
+  color: white !important;
+  text-decoration: none !important;
+}
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
 }
-.flat-card {
-  width: 100%;
-  position: relative;
-  margin: .5rem 0 1rem 0;
-  border-radius: 2px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-}
-.flat-card-image {
-  height: 180px;
-  background-position: center;
-  background-size: cover;
-}
-.flat-card-content {
-  padding: 24px;
-  background-color: #F8F9FA;
-  background-color: rgba(0,0,0,.7) !important;
-  color: black;
-  opacity: .4;
-  &:hover {
-    background-color: rgba(20,20,20,.7) !important;
-    opacity: .7;
-    text-decoration: none !important;
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .cards {
+    grid-template-columns: 1fr;
   }
 }
-a:hover, a:focus {
-  color: white !important;
-  text-decoration: none !important;
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.card-category {
+  box-shadow: 3px 2px 3px grey;
+  height: 320px;
+  margin: 15px;
+  display: flex;
+  align-item: center;
+  text-align: center;
 }
