--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,38 +1,20 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h1>List of cocktails</h1>
-      <h2> </h2>
+  <h1>List of cocktails</h1>
       <%= link_to "Add a new Cocktail", new_cocktail_path, class: 'btn btn-primary' %>
-      <br>
-      <br>
-      <div class="row">
-        <% @cocktails.each do |cocktail| %>
-          <!-- <li class="list-group-item">
-            <%= link_to cocktail.name, cocktail_path(cocktail) %>
-          </li> -->
-        <!-- <div class="row"> -->
-          <div class="col-4">
-            <div class="cards">
-            <div class="flat-card">
-              <div class="flat-card-image" style="background-image: url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>')">
-
-              </div>
-              <div class="flat-card-content" style="background-color: rgba(245, 245, 245, 0.4);">
-                <div class="flat-card-title">
-                  <h4><%= link_to cocktail.name, cocktail_path(cocktail)%></h4>
-                </div>
-              </div>
-            </div>
-            </div>
-          </div>
-        <% end %>
-        <!-- </div> -->
-      </div>
-      <br>
-      <br>
+  <br>
+  <br>
+  <div class="container">
+    <div class="cards">
+      <% @cocktails.each do |cocktail| %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo %>')">
+          <h4><%= link_to cocktail.name, cocktail_path(cocktail)%></h4>
+        </div>
+      <% end %>
     </div>
   </div>
+  <br>
+  <br>
 </div>
+
 
 
